--- a/src/index.tp1.html
+++ b/src/index.tp1.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="React Redux React-Router Webpack skeleton">
-	<title>React Webpack starter</title>
+	<title>Validar Check in application</title>
 </head>
 <body>
 	<div id="app"></div>	
